--- a/python_datasc/pandas_missing.ipynb
+++ b/python_datasc/pandas_missing.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "id": "43a7d906",
    "metadata": {},
    "outputs": [
@@ -196,26 +196,26 @@
       "(20, 1)\n",
       "(20,)\n",
       "           X          y\n",
-      "0  -1.913280 -87.286608\n",
-      "1  -1.724918 -79.815577\n",
-      "2  -1.412304 -58.442734\n",
-      "3  -1.012831 -52.517783\n",
+      "15 -1.913280 -87.286608\n",
+      "3  -1.724918 -79.815577\n",
+      "5  -1.412304 -58.442734\n",
+      "7  -1.012831 -52.517783\n",
       "4  -0.908024 -27.520687\n",
-      "5  -0.562288 -23.697502\n",
-      "6  -0.469474 -19.956148\n",
-      "7  -0.465730 -22.049313\n",
-      "8  -0.463418 -26.242851\n",
-      "9  -0.234153 -10.067937\n",
-      "10 -0.234137 -13.255462\n",
-      "11 -0.138264  -3.317217\n",
-      "12  0.241962   8.366929\n",
-      "13  0.314247  19.791839\n",
-      "14  0.496714  19.506267\n",
-      "15  0.542560  21.566736\n",
-      "16  0.647689  42.336570\n",
-      "17  0.767435  39.737594\n",
-      "18  1.523030  71.431985\n",
-      "19  1.579213  69.021887\n"
+      "13 -0.562288 -23.697502\n",
+      "10 -0.469474 -19.956148\n",
+      "18 -0.465730 -22.049313\n",
+      "6  -0.463418 -26.242851\n",
+      "8  -0.234153 -10.067937\n",
+      "2  -0.234137 -13.255462\n",
+      "17 -0.138264  -3.317217\n",
+      "9   0.241962   8.366929\n",
+      "19  0.314247  19.791839\n",
+      "1   0.496714  19.506267\n",
+      "16  0.542560  21.566736\n",
+      "0   0.647689  42.336570\n",
+      "12  0.767435  39.737594\n",
+      "14  1.523030  71.431985\n",
+      "11  1.579213  69.021887\n"
      ]
     }
    ],
@@ -225,8 +225,8 @@
     "print(X.shape)\n",
     "print(y.shape)\n",
     "dt = pd.DataFrame(zip(X.flat, y), columns = ['X', 'y'])\n",
-    "dt = dt.sort_values('X')\n",
-    "dt  =dt.reset_index(drop =1)\n",
+    "dt.sort_values('X', inplace =True)\n",
+    "# dt  =dt.reset_index(drop =1)\n",
     "print(dt)"
    ]
   },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 103,
    "id": "a5e0e8e8",
    "metadata": {},
    "outputs": [
@@ -285,18 +285,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          X          y\n",
-      "0 -1.913280 -87.286608\n",
-      "1 -1.724918 -79.815577\n",
-      "2 -1.412304 -58.442734\n",
-      "3       NaN -52.517783\n",
-      "4 -0.908024 -27.520687\n",
-      "          X          y\n",
-      "0 -1.913280 -87.286608\n",
-      "1 -1.724918 -79.815577\n",
-      "2 -1.412304 -58.442734\n",
-      "3 -1.012831 -52.517783\n",
-      "4 -0.908024 -27.520687\n"
+      "           X          y\n",
+      "15 -1.913280 -87.286608\n",
+      "3  -1.724918 -79.815577\n",
+      "5  -1.412304 -58.442734\n",
+      "7        NaN -52.517783\n",
+      "4  -0.908024 -27.520687\n",
+      "           X          y\n",
+      "15 -1.913280 -87.286608\n",
+      "3  -1.724918 -79.815577\n",
+      "5  -1.412304 -58.442734\n",
+      "7  -1.012831 -52.517783\n",
+      "4  -0.908024 -27.520687\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 104,
    "id": "87c076d9",
    "metadata": {},
    "outputs": [],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 105,
    "id": "eb406849",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 106,
    "id": "b4fd570b",
    "metadata": {
     "scrolled": true
@@ -353,10 +353,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22aadf48f40>"
+       "<matplotlib.legend.Legend at 0x22ab6f08d90>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -437,47 +437,455 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "ce37c818",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   X       16 non-null     float64\n",
+      " 1   y       20 non-null     float64\n",
+      "dtypes: float64(2)\n",
+      "memory usage: 448.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "c3670fc5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        X      y\n",
+       "0   False  False\n",
+       "1   False  False\n",
+       "2   False  False\n",
+       "3    True  False\n",
+       "4   False  False\n",
+       "5    True  False\n",
+       "6   False  False\n",
+       "7   False  False\n",
+       "8   False  False\n",
+       "9   False  False\n",
+       "10   True  False\n",
+       "11  False  False\n",
+       "12   True  False\n",
+       "13  False  False\n",
+       "14  False  False\n",
+       "15  False  False\n",
+       "16  False  False\n",
+       "17  False  False\n",
+       "18  False  False\n",
+       "19  False  False"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dt = dt.interpolate()"
+    "dt.isnull()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e18f75ab",
+   "execution_count": 84,
+   "id": "de14440e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-52.517783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-23.697502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-13.255462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.366929</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     X          y\n",
+       "3  NaN -52.517783\n",
+       "5  NaN -23.697502\n",
+       "10 NaN -13.255462\n",
+       "12 NaN   8.366929"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "b.interpolate(method =\"pad\", axis = 0)"
+    "dt[dt.isnull().values]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "87a4646c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b.info()"
+    "dc = dt.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "3c838f0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.913280</td>\n",
+       "      <td>-87.286608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.724918</td>\n",
+       "      <td>-79.815577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.412304</td>\n",
+       "      <td>-58.442734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.908024</td>\n",
+       "      <td>-52.517783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.908024</td>\n",
+       "      <td>-27.520687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.469474</td>\n",
+       "      <td>-23.697502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-0.469474</td>\n",
+       "      <td>-19.956148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.465730</td>\n",
+       "      <td>-22.049313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.463418</td>\n",
+       "      <td>-26.242851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.234153</td>\n",
+       "      <td>-10.067937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-0.138264</td>\n",
+       "      <td>-13.255462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>-0.138264</td>\n",
+       "      <td>-3.317217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.314247</td>\n",
+       "      <td>8.366929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.314247</td>\n",
+       "      <td>19.791839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.496714</td>\n",
+       "      <td>19.506267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.542560</td>\n",
+       "      <td>21.566736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.647689</td>\n",
+       "      <td>42.336570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.767435</td>\n",
+       "      <td>39.737594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1.523030</td>\n",
+       "      <td>71.431985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1.579213</td>\n",
+       "      <td>69.021887</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           X          y\n",
+       "0  -1.913280 -87.286608\n",
+       "1  -1.724918 -79.815577\n",
+       "2  -1.412304 -58.442734\n",
+       "3  -0.908024 -52.517783\n",
+       "4  -0.908024 -27.520687\n",
+       "5  -0.469474 -23.697502\n",
+       "6  -0.469474 -19.956148\n",
+       "7  -0.465730 -22.049313\n",
+       "8  -0.463418 -26.242851\n",
+       "9  -0.234153 -10.067937\n",
+       "10 -0.138264 -13.255462\n",
+       "11 -0.138264  -3.317217\n",
+       "12  0.314247   8.366929\n",
+       "13  0.314247  19.791839\n",
+       "14  0.496714  19.506267\n",
+       "15  0.542560  21.566736\n",
+       "16  0.647689  42.336570\n",
+       "17  0.767435  39.737594\n",
+       "18  1.523030  71.431985\n",
+       "19  1.579213  69.021887"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.bfill()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c838f0b",
+   "id": "e3c5ef83",
    "metadata": {},
    "outputs": [],
    "source": []
