--- a/python_datasc/pandas_missing.ipynb
+++ b/python_datasc/pandas_missing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "id": "ebccdc7b",
    "metadata": {},
    "outputs": [],
@@ -13,179 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c6dce4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a  =pd.DataFrame([[1, 'a'],[2, 'c'],[3, 'b'],[4, 'd']], columns  =['X1', 'X2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecf40f7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a['Y'] = a['X1'] ** 2 \n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ab15267",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f721566",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.at[2, 'Y'] = np.nan\n",
-    "a.at[3, 'X2'] = np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "369c2037",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ec250c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = a.sort_values('X2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4a80876",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.fillna(method=\"pad\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5eecdfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b['Y'].interpolate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ee493e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(b)\n",
-    "b.interpolate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "0cc23e9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.impute import SimpleImputer\n",
-    "imp = SimpleImputer(missing_values=np.nan, strategy='median')\n",
-    "c = imp.fit_transform(b[['Y']]) ## noter ici les doubles crochets\n",
-    "print(c)\n",
-    "b['Y'] = c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab47f4c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c88be204",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.at[2,'Y']  = np.nan\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc44c716",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f360c691",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sklearn.experimental import enable_iterative_imputer  # noqa\n",
-    ">>> # now you can import normally from sklearn.impute\n",
-    "from sklearn.impute import IterativeImputer"
+    "from sklearn.impute import IterativeImputer\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.impute import KNNImputer,SimpleImputer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "efb95208",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(b)\n",
-    "imp = IterativeImputer(random_state=0)\n",
-    "c = imp.fit_transform(b[['Y']]) ## noter ici les doubles crochets\n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c1eada7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.fillna(method=\"ffill\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "id": "43a7d906",
    "metadata": {},
    "outputs": [
@@ -220,7 +62,7 @@
     }
    ],
    "source": [
-    "from sklearn.datasets import make_regression\n",
+    "\n",
     "X, y = make_regression(n_samples=20, n_features=1, noise=5, random_state=42)\n",
     "print(X.shape)\n",
     "print(y.shape)\n",
@@ -232,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "id": "e19cac7c",
    "metadata": {},
    "outputs": [],
@@ -242,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 111,
    "id": "3f0bd7b8",
    "metadata": {
     "scrolled": true
@@ -251,10 +93,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22aaded1670>]"
+       "[<matplotlib.lines.Line2D at 0x22ab758cd60>]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -277,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 112,
    "id": "a5e0e8e8",
    "metadata": {},
    "outputs": [
@@ -313,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "id": "87c076d9",
    "metadata": {},
    "outputs": [],
@@ -325,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 114,
    "id": "eb406849",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.impute import KNNImputer,SimpleImputer\n",
+    "\n",
     "imp = IterativeImputer(random_state=0)\n",
     "np1 = dt[['X', 'y']].to_numpy()\n",
     "np2 = imp.fit_transform(np1)\n",
@@ -344,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 115,
    "id": "b4fd570b",
    "metadata": {
     "scrolled": true
@@ -353,10 +195,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22ab6f08d90>"
+       "<matplotlib.legend.Legend at 0x22ab7023a30>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,28 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "d82e9621",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt = dt.sort_values('X')\n",
-    "dt_inter = dt_inter.sort_values('X')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 116,
    "id": "82110612",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22aafaa3e20>]"
+       "[<matplotlib.lines.Line2D at 0x22ab70b9dc0>]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -465,7 +296,9 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "c3670fc5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -884,8 +717,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "e3c5ef83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05726013724292493\n",
+      "0.000988070710285649\n",
+      "0.002632595263623769\n",
+      "0.003185180237325761\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "print(mean_squared_error(dt_nan.X, np3[:,0] ))# SimpleImputer\n",
+    "print(mean_squared_error(dt_nan.X, np4[:,0] )) #KNNImputer\n",
+    "print(mean_squared_error(dt_nan.X, np2[:,0] )) # iterativeImputer\n",
+    "print(mean_squared_error(dt_nan.X, dt_inter.X )) #pandas interpolate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "20bd45f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15   -87.286608\n",
+       "3    -79.815577\n",
+       "5    -58.442734\n",
+       "7    -52.517783\n",
+       "4    -27.520687\n",
+       "13   -23.697502\n",
+       "10   -19.956148\n",
+       "18   -22.049313\n",
+       "6    -26.242851\n",
+       "8    -10.067937\n",
+       "2    -13.255462\n",
+       "17    -3.317217\n",
+       "9      8.366929\n",
+       "19    19.791839\n",
+       "1     19.506267\n",
+       "16    21.566736\n",
+       "0     42.336570\n",
+       "12    39.737594\n",
+       "14    71.431985\n",
+       "11    69.021887\n",
+       "Name: y, dtype: float64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_nan.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "67b600f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-87.28660841, -79.81557713, -58.44273406, -52.51778288,\n",
+       "       -27.52068737, -23.69750189, -19.95614757, -22.04931307,\n",
+       "       -26.24285096, -10.06793677, -13.25546214,  -3.31721743,\n",
+       "         8.36692892,  19.79183892,  19.50626679,  21.56673635,\n",
+       "        42.33657029,  39.73759359,  71.43198537,  69.02188713])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np3[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9dff92",
    "metadata": {},
    "outputs": [],
    "source": []
