--- a/python_datasc/delete_row.ipynb
+++ b/python_datasc/delete_row.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "22acad1c",
+   "metadata": {},
+   "source": [
+    "# Nettoyage des valeurs non significatives"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "bbe8b59e",
@@ -214,6 +222,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa2e381c",
+   "metadata": {},
+   "source": [
+    "###  Détection des lignes dupliquées avec pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "4260720f",
@@ -318,6 +334,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf732eb2",
+   "metadata": {},
+   "source": [
+    "### Génération d'une regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "f73010e1",
@@ -417,6 +441,14 @@
    "outputs": [],
    "source": [
     "data.insert(4, 'x5', 0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37f923b0",
+   "metadata": {},
+   "source": [
+    "### Utilisation de la méthode nunique de pandas pour compter les valeurs differentes"
    ]
   },
   {
@@ -736,214 +768,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "cd350986",
+   "cell_type": "markdown",
+   "id": "6bee58dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x1</th>\n",
-       "      <th>x2</th>\n",
-       "      <th>x3</th>\n",
-       "      <th>x4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.110923</td>\n",
-       "      <td>-1.150994</td>\n",
-       "      <td>-0.544383</td>\n",
-       "      <td>0.375698</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.314247</td>\n",
-       "      <td>-0.908024</td>\n",
-       "      <td>-1.012831</td>\n",
-       "      <td>-1.412304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.611676</td>\n",
-       "      <td>1.031000</td>\n",
-       "      <td>-0.676922</td>\n",
-       "      <td>0.931280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.299007</td>\n",
-       "      <td>0.091761</td>\n",
-       "      <td>0.087047</td>\n",
-       "      <td>-1.987569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.542560</td>\n",
-       "      <td>-0.463418</td>\n",
-       "      <td>-0.469474</td>\n",
-       "      <td>-0.465730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-0.234137</td>\n",
-       "      <td>1.579213</td>\n",
-       "      <td>-0.234153</td>\n",
-       "      <td>0.767435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.356240</td>\n",
-       "      <td>-0.072010</td>\n",
-       "      <td>0.812526</td>\n",
-       "      <td>1.003533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>-1.763040</td>\n",
-       "      <td>0.324084</td>\n",
-       "      <td>0.343618</td>\n",
-       "      <td>-0.385082</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-0.645120</td>\n",
-       "      <td>0.361396</td>\n",
-       "      <td>0.361636</td>\n",
-       "      <td>1.538037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>-0.185659</td>\n",
-       "      <td>-1.106335</td>\n",
-       "      <td>-0.479174</td>\n",
-       "      <td>-1.196207</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>-0.138264</td>\n",
-       "      <td>0.647689</td>\n",
-       "      <td>0.496714</td>\n",
-       "      <td>1.523030</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>-1.913280</td>\n",
-       "      <td>-1.724918</td>\n",
-       "      <td>0.241962</td>\n",
-       "      <td>-0.562288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>-1.057711</td>\n",
-       "      <td>0.822545</td>\n",
-       "      <td>-0.013497</td>\n",
-       "      <td>-1.220844</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>-0.291694</td>\n",
-       "      <td>-0.601707</td>\n",
-       "      <td>-0.600639</td>\n",
-       "      <td>1.852278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>-0.225776</td>\n",
-       "      <td>0.067528</td>\n",
-       "      <td>1.465649</td>\n",
-       "      <td>-1.424748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0.171368</td>\n",
-       "      <td>-0.115648</td>\n",
-       "      <td>0.738467</td>\n",
-       "      <td>-0.301104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>-0.309212</td>\n",
-       "      <td>0.331263</td>\n",
-       "      <td>-0.839218</td>\n",
-       "      <td>0.975545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>-0.719844</td>\n",
-       "      <td>-0.460639</td>\n",
-       "      <td>-1.478522</td>\n",
-       "      <td>1.057122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>-1.959670</td>\n",
-       "      <td>-1.328186</td>\n",
-       "      <td>0.208864</td>\n",
-       "      <td>0.196861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1.564644</td>\n",
-       "      <td>-2.619745</td>\n",
-       "      <td>-0.035826</td>\n",
-       "      <td>0.821903</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          x1        x2        x3        x4\n",
-       "0   0.110923 -1.150994 -0.544383  0.375698\n",
-       "1   0.314247 -0.908024 -1.012831 -1.412304\n",
-       "2   0.611676  1.031000 -0.676922  0.931280\n",
-       "3  -0.299007  0.091761  0.087047 -1.987569\n",
-       "4   0.542560 -0.463418 -0.469474 -0.465730\n",
-       "5  -0.234137  1.579213 -0.234153  0.767435\n",
-       "6   1.356240 -0.072010  0.812526  1.003533\n",
-       "7  -1.763040  0.324084  0.343618 -0.385082\n",
-       "8  -0.645120  0.361396  0.361636  1.538037\n",
-       "9  -0.185659 -1.106335 -0.479174 -1.196207\n",
-       "10 -0.138264  0.647689  0.496714  1.523030\n",
-       "11 -1.913280 -1.724918  0.241962 -0.562288\n",
-       "12 -1.057711  0.822545 -0.013497 -1.220844\n",
-       "13 -0.291694 -0.601707 -0.600639  1.852278\n",
-       "14 -0.225776  0.067528  1.465649 -1.424748\n",
-       "15  0.171368 -0.115648  0.738467 -0.301104\n",
-       "16 -0.309212  0.331263 -0.839218  0.975545\n",
-       "17 -0.719844 -0.460639 -1.478522  1.057122\n",
-       "18 -1.959670 -1.328186  0.208864  0.196861\n",
-       "19  1.564644 -2.619745 -0.035826  0.821903"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data.iloc[:,:4]"
+    "### Utilisation de sklearn pour supprimer des colonnes à faible variance "
    ]
   },
   {
@@ -963,6 +792,7 @@
    "source": [
     "from sklearn.feature_selection import VarianceThreshold\n",
     "from sklearn import set_config\n",
+    "# nouveau dans sklearn sorite vers Pandas\n",
     "#set_config(transform_output = \"pandas\")\n",
     "variance = VarianceThreshold().set_output(transform= 'pandas')\n",
     "dt2 = variance.fit_transform(data.iloc[:,:4])\n",
@@ -1181,8 +1011,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9f888c9",
+   "metadata": {},
+   "source": [
+    "##  Connaitre la version de sklearn"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 29,
    "id": "3b174f3f",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1028,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0.2\n"
+      "1.2.2\n"
      ]
     }
    ],
@@ -1202,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53505140",
+   "id": "e2c9e819",
    "metadata": {},
    "outputs": [],
    "source": []
