--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -156,7 +156,10 @@
     "\n",
     "https://www.kaggle.com/learn/pandas\n",
     "\n",
-    "system design de l'état"
+    "system design de l'état\n",
+    "https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.signal.lfilter.html#scipy.signal.lfilter\n",
+    "\n",
+    "https://stackoverflow.com/questions/37598986/reducing-noise-on-data"
    ]
   },
   {
