--- a/python_datasc/delete_row.ipynb
+++ b/python_datasc/delete_row.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "365a933e",
+   "id": "22ffafd6",
    "metadata": {},
    "source": [
     "# Nettoyage des valeurs non significatives"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce74d00",
+   "id": "810ffcf7",
    "metadata": {},
    "source": [
     "###  Détection des lignes dupliquées avec pandas"
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e94f541e",
+   "id": "687d3c0b",
    "metadata": {},
    "source": [
     "### Génération d'une regression"
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10048ccc",
+   "id": "2bc2c92d",
    "metadata": {},
    "source": [
     "### Utilisation de la méthode nunique de pandas pour compter les valeurs differentes"
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3330e28",
+   "id": "3704ab23",
    "metadata": {},
    "source": [
     "### Utilisation de sklearn pour supprimer des colonnes à faible variance "
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3489ef2",
+   "id": "55549f81",
    "metadata": {},
    "source": [
     "##  Connaitre la version de sklearn"
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba297fce",
+   "id": "c31c54cd",
    "metadata": {},
    "source": [
     "## Creation d'une regression avec une forte dispersion \n"
@@ -1048,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "38fd4508",
+   "id": "8cc10828",
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f0fd60ea",
+   "id": "7005cb74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "4518cd26",
+   "id": "0d5adfd6",
    "metadata": {},
    "outputs": [
     {
@@ -1121,8 +1121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "81a633e3",
+   "execution_count": 156,
+   "id": "c89d73df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,8 +1133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "b0a2f905",
+   "execution_count": 157,
+   "id": "9ddd4e6d",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "        1,  1, -1, -1, -1, -1])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,8 +1156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "e65e4fdf",
+   "execution_count": 158,
+   "id": "b9cbf810",
    "metadata": {},
    "outputs": [
     {
@@ -1180,8 +1180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "3bdc503f",
+   "execution_count": 159,
+   "id": "7d8e9626",
    "metadata": {},
    "outputs": [
     {
@@ -1207,17 +1207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "fa0c4fd4",
+   "execution_count": 160,
+   "id": "c65652eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x215479c7490>]"
+       "[<matplotlib.lines.Line2D at 0x2155b750a30>]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "fb3f2603",
+   "id": "c8d53bb2",
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "7bf52d8e",
+   "id": "39b29cf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "d300d26f",
+   "id": "7b6746a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "686006a0",
+   "id": "fe33c87b",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "b55a4c6f",
+   "id": "ded9eeb7",
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "67a7556c",
+   "id": "0ea9282b",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "44537cb7",
+   "id": "07d0c00b",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "83ef8eca",
+   "id": "e8466e8b",
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "d7fd3cc3",
+   "id": "6a271a40",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "b1c1db16",
+   "id": "4661907b",
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2de04e4b",
+   "id": "719c7657",
    "metadata": {},
    "outputs": [],
    "source": []
